# rastros-musical

./: .dockerignore  .env-sample  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/:  __init__.py  main.py  run_ingestion.py
app/api/: genres.py  propagation.py
app/db/: bronze.py  database.py  diagnostics.py  seed_location.py  setup.py  silver.py
app/exceptions/: __ini__.py  handlers.py
app/ingestion/: bronze_loader.py  genre_origins.py  genres.py  gold_loader.py  google_trends.py  ingestion_runner.py  musicbrainz.py  silver_loader.py  trends_integration.py
app/middleware/: logging.py  logging_config.py
app/schemas/: api.py  artist.py  genre.py  location.py
app/tests/: conftest.py
app/tests/integration/: conftest.py  test_api_genres.py  test_api_propagation.py  test_middleware.py  test_trends_integration.py
app/tests/unit/db/: test_bronze.py  test_db.py  test_seed_location.py  test_setup.py  test_silver.py
app/tests/unit/exceptions/: test_exception.py
app/tests/unit/ingestion/: __init_py  test_bronze_loader.py  test_gold_loader.py  test_google_trends.py  test_ingestion_runner.py  test_musicbrainz.py  (+2 more)
docs/architecture/: ADR-002-quality-tooling.md
docs/architecture/artefacts/: Resumo do fluxo.md  data_flow(ELT).md  diagrams.md
docs/architecture/en/: ADR-001-storage-engine.md  ADR-003-test-coverage-strategy.md  ADR-004-clean-code-tdd.md  ADR-005-data-strategy-musicbrainz.md  ADR-006-repository-structure.md  ADR-007-data-modeling.md  ADR-009-depency-management.md  ADR-010-data-sources.md  ADR-011-data-enrichment-strategy.md
docs/architecture/pt/: ADR-001-selecao-motor-armazenamento.md  ADR-002-ferramenta-qualidade.md  ADR-003-estrategia-testes-cobertura.md  ADR-004-clean-code-tdd.md  ADR-005-estrategia-de-dados.md  ADR-006-estrutura-repositorio.md  ADR-007-modelagem-dados.md  ADR-008-frontend-framework.md  ADR-009-gerenciamento-dependencias.md  ADR-011-estrategia-enriquecimento-dados.md  ADR-10-fontes-dados.md  README-PT.md
docs/management/: todo-en.md  todo-pt.md
tests/: test_main.py
tests/db/: test_db.py
(+4 files in other folders)
